--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,13 +1,13 @@
 name: EnchantSplitter
 main: me.simplicitee.enchantsplit.EnchantSplit
-api-version: 1.16
-version: 2.1.0
-author: Simplicitee
+version: 2.1.0a_Jeppa
+author: Simplicitee, Jeppa
+api-version: 1.13
 description: A simple plugin for splitting enchanted books into multiple books with a single enchant each.
 commands:
   enchantsplit:
     description: Splits the enchantments on an enchanted book into multiple enchanted books
-    alisases: split
+    aliases: split
     usage: "Usage: /enchantsplit"
     default: op
 permissions:
